code with an error of ssl setup